--- a/tourist-web/src/main/webapp/view/wap/touristGoodInfo.html
+++ b/tourist-web/src/main/webapp/view/wap/touristGoodInfo.html
@@ -49,24 +49,27 @@
                 </ul>
             </div>
         </div>
-        <div class="weui_cells weui_cells_access xia" style="margin-top:10px; font-size:14px"><a class="weui_cell"
-                                                                                                 href="javascript:void(0);">
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>出发时间</p>
-            </div>
-        </a></div>
+        <div class="weui_cells weui_cells_access xia" style="margin-top:10px; font-size:14px">
+            <a class="weui_cell" href="javascript:void(0);">
+                <div class="weui_cell_bd weui_cell_primary">
+                    <p>出发时间</p>
+                </div>
+            </a></div>
         <div class="custom-switch" style="padding:0px 0px; background-color:#fff; overflow:hidden">
             <div class="switch_slider" id="loopImgDiv"
                  style="padding-bottom: 0px; padding-left: 2%; padding-top: 2%; padding-bottom: 2%; padding-right: 0px; background: #fff;">
                 <div class="inner">
                     <div class="switch-container">
                         <div id="wrapperPanel" class="swiper-wrapper" style="height: auto;">
-                            <div class="swiper-slide" style="width: auto;"><a href="">
-                                <div class="custom-image-mask"><span class="bn">2016.10.10 9:00</span> <span
-                                        class="bna">剩余8人</span>
-                                    <div class="masksd"></div>
-                                    <img src="../../assets/img/a1.jpg" style="width:100%; "/></div>
-                            </a></div>
+                            <div class="swiper-slide" style="width: auto;">
+                                <a href="">
+                                    <div class="custom-image-mask"><span class="bn">2016.10.10 9:00</span> <span
+                                            class="bna">剩余8人</span>
+                                        <div class="masksd"></div>
+                                        <img src="../../assets/img/a1.jpg" style="width:100%; "/>
+                                    </div>
+                                </a>
+                            </div>
                             <div class="swiper-slide" style="width: auto;"><a href="">
                                 <div class="custom-image-mask"><span class="bn">2016.10.10 9:00</span> <span
                                         class="bna">剩余8人</span>
@@ -110,7 +113,8 @@
             <div class="weui_navbar_item orange weui_bar_item_on "> 活动详情</div>
             <div class="weui_navbar_item orange"> 注意事项</div>
         </div>
-        <img src="../../assets/img/a1.jpg" width="100%"></div>
+        <img src="../../assets/img/a1.jpg" width="100%">
+    </div>
     <p style="height:40px;"></p>
     <div class="item-action">
         <div class="toggle-home"><a href="index.html"><span class="icon"></span>首页</a></div>
