--- a/tourist-web/src/main/webapp/view/manage/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderList.html
@@ -141,7 +141,7 @@
                 </select>
             </div>
             <div class="tab-content">
-                <table id="table" data-toggle="table" data-url="../../../mock/supplier/orderList.json"
+                <table id="table" data-toggle="table" th:data-url="@{/base/touristOrders}" data-url="../../../mock/supplier/orderList.json"
                        data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
                        data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                        data-escape="true" data-query-params="getParams"
@@ -157,7 +157,7 @@
                         </th>
                         <th data-field="touristName" data-align="center" data-formatter="touristNameFormatter">路线名称</th>
                         <th data-field="orderMoney" data-align="center" data-sortable="true">金额</th>
-                        <th data-field="buyerName" data-align="center" data-sortable="true">购买人</th>
+                        <th data-field="buyerName" data-align="center">购买人</th>
                         <th data-field="payTypeValue" data-align="center" data-sortable="true">支付状态</th>
                         <th data-field="createTime" data-align="center" data-sortable="true">下单时间</th>
                         <th data-field="payTime" data-align="center" data-sortable="true">支付时间</th>
