--- a/tourist-web/src/main/webapp/view/manage/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/main.html
@@ -159,7 +159,7 @@
         </div>
         <div class="row J_mainContent" id="content-main">
             <iframe class="J_iframe" name="iframe0" width="100%" height="100%"
-                    src="salesStatistics.html" frameborder="0"
+                    src="salesStatistics.html"  th:src="@{/supplier/showSaleStatistics}" frameborder="0"
                     data-id="/top/welcome" seamless></iframe>
         </div>
     </div>
