--- a/tourist-web/src/main/webapp/view/manage/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderList.html
@@ -13,9 +13,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css"/>
-    <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <!--<link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>-->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css"/>
-    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
+    <!--<link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>-->
     <style>
         .panel-success {
             border-color: #1dc5a3;
@@ -62,20 +62,14 @@
                                         <input type="text" class="form-control input-sm mb10"
                                                id="supplierName" name="supplierName" placeholder="供应商名称"/>
                                     </div>
-                                    <!--<p></p>-->
-                                    <!--<div class="form-group">-->
-                                    <!--<label class="control-label" for="orderStateEnum">付款状态：</label>-->
-                                    <!--<select class="form-control" name="orderStateEnum" id="orderStateEnum">-->
-                                    <!--<option value="-1">全部</option>-->
-                                    <!--<option value="0">未支付</option>-->
-                                    <!--<option value="1">已支付</option>-->
-                                    <!--<option value="2">已确认</option>-->
-                                    <!--<option value="3">已完成</option>-->
-                                    <!--<option value="4">退款中</option>-->
-                                    <!--<option value="5">已退款</option>-->
-                                    <!--<option value="6">已取消</option>-->
-                                    <!--</select>-->
-                                    <!--</div>-->
+                                    <div class="form-group">
+                                    <label class="control-label" for="settlement">结算状态：</label>
+                                    <select class="form-control" name="settlement" id="settlement">
+                                    <option value="-1">全部</option>
+                                    <option value="5">已结算</option>
+                                    <option value="6">未结算</option>
+                                    </select>
+                                    </div>
                                     <br/><br/>
 
                                     <div class="form-group">
@@ -158,14 +152,15 @@
                         <th data-field="touristName" data-align="center" data-formatter="touristNameFormatter">路线名称</th>
                         <th data-field="orderMoney" data-align="center" data-sortable="true">金额</th>
                         <th data-field="buyerName" data-align="center">购买人</th>
-                        <th data-field="payTypeValue" data-align="center" data-sortable="true">支付状态</th>
+                        <th data-field="payTypeValue" data-align="center">支付状态</th>
                         <th data-field="createTime" data-align="center" data-sortable="true">下单时间</th>
                         <th data-field="payTime" data-align="center" data-sortable="true">支付时间</th>
-                        <th data-field="payType" data-align="center" data-sortable="true">支付方式</th>
-                        <th data-field="touristDate" data-align="center" data-sortable="true"
+                        <th data-field="payType" data-align="center">支付方式</th>
+                        <th data-field="touristDate" data-align="center"
                             data-formatter="touristDateFormatter" data-events="touristDateEvents">出行时间
                         </th>
                         <th data-field="peopleNumber" data-align="center" data-sortable="true">购买数量</th>
+                        <th data-field="settlement" data-align="center" data-formatter="settlementFormatter">结算状态</th>
                         <th data-field="remarks" data-align="center" data-formatter="remarkFormatter"
                             data-events="remarkEvents">备注
                         </th>
